# RiskModels_API

./: # Agent Skill: Chat Upgrade  .cursorrules  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  API_TERMS.md  AUTHENTICATION_GUIDE.md  BUG_REPORT.md  CHANGELOG.md  CHAT_INTEGRATION_IMPLEMENTATION.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCS_PROCESS.md  ENGINE_METHOD_NOTES.md  ERROR_SCHEMA.md  MAINTENANCE_GUIDE.md  MIGRATION_V3.md  OPENAPI_SPEC.yaml  PERFORMANCE_NOTES.md  PHASE_3_COMPLETE.md  PHASE_3_MARKETING_STATUS.md  PREMIUM_TIER_DESIGN.md  PREMIUM_TIER_IMPLEMENTATION.md  PRICING_STRATEGY_ANALYSIS.md  QA_REPORT.md  QA_REPORT_RISKMODELS_API.md  README.md  README_API.md  RELEASE_NOTES.md  RESPONSE_METADATA.md  RiskModels_API_SMOKE_FIXIT.md  SCHEMA_COMPLIANCE.md  SECURITY_HISTORICAL_LEAK.md  SEMANTIC_ALIASES.md  SKILL.md  SUPABASE_TABLES.md  V3_UPDATE_SUMMARY.md  VALIDATION_HELPERS.md  (+11 more)
.claude/: settings.local.json
.github/: topics.yml
app/: layout.tsx  page.tsx
archive/: API_ENDPOINT_TESTING.md  CLI_COMMAND_TESTING.md  IMPLEMENTATION_SUMMARY.md  PHASE_1_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_3_MARKETING_STATUS.md  README.md
cli/: README.md  package-lock.json  package.json
components/: AgenticSection.tsx  CodeBlock.tsx  ComparisonTable.tsx  Footer.tsx  Hero.tsx  HeroFeatureGrid.tsx  HeroGetStartedPulse.tsx  HeroTickerSearch.tsx  LiveDemoNav.tsx  Logo.tsx  Navbar.tsx  PortalSearch.tsx  QuickstartCodeExamples.tsx  QuickstartDemoKey.tsx  TerminalShowcase.tsx  ThemeByPath.tsx  TryFree.tsx  UseCases.tsx
docs/: API_IMPROVEMENT_PROMPT.md  ERM3_ZARR_API_PARITY.md  JULES_AUDIT_PROMPT.md  PEER_GROUP_DEPLOYMENT.md  SNAPSHOT_FRONTEND_ARCH.md  SNAPSHOT_REDESIGN.md  SNAPSHOT_ROADMAP.md  ZARR_API_RECONCILIATION_STATE.md  ZARR_SYMBOL_INDEX_FLAP.md
emails/: auto-refill-failed.tsx  auto-refill-success.tsx  constants.ts  key-expiring.tsx  key-issued.tsx  low-balance.tsx  market-insights.tsx  monthly-spend-reset.tsx  payment-failed.tsx  subscription-confirmed.tsx  trial-ending.tsx  usage-report.tsx  welcome.tsx
examples/: README.md  sdk_visual_refinement.py
internal/: README.md
lib/: api-reference-data.ts  api-response.ts  app-url.ts  copy-to-clipboard.ts  cors.ts  email-service.ts  env.ts  gateway-auth.ts  mdx.ts  portal-search-index.ts  resend-audit.ts  ticker-aliases.ts  user-api-keys.ts  zarr-config.ts
mcp/: INSTALL.md  README.md  package-lock.json  package.json
mcp-server/: README.md  package-lock.json  package.json
notebooks/: riskmodels_quickstart.ipynb
sdk/: README.md  pyproject.toml  setup.py
sdk/riskmodels/: __init__.py  auth.py  capabilities.py  client.py  env.py  legends.py  lineage.py  llm.py  mapping.py  metadata_attach.py  metrics_snapshot.py  parsing.py  peer_group.py  portfolio_math.py  ticker_resolve.py  transport.py  visual_refinement.py  xarray_convert.py
sdk/riskmodels/performance/: stock.py
sdk/riskmodels/snapshots/: __init__.py  _base_template.py  _compose.py  _data.py  _page.py  _plotly_charts.py  _plotly_theme.py  p1_stock_performance.py  r1_risk_profile.py  refine.py  s1_forensic.py  s2_waterfall.py  stock_deep_dive.py  zarr_context.py
sdk/riskmodels/visuals/: __init__.py  _mag7.py  client_bridge.py  gallery.py  l3_decomposition.py  mag7_l3_sigma_rr.py  save.py  smart_subheader.py  styles.py  utils.py
sdk/scripts/: bulk_dd_render.py  mag7_dd_zarr_vs_api.py
sdk/tests/: conftest.py  test_client_mock.py  test_csv_exports.py  test_env.py  test_factor_correlation.py  test_github_visual_assets.py  test_integration_live.py  test_l3_and_batch.py  test_llm_context.py  test_metadata.py  test_metrics_snapshot.py  test_peer_group.py  test_portfolio_math.py  test_rankings.py  test_rename_completeness.py  test_returns_endpoints.py  test_s2_waterfall.py  test_search_tickers_attrs.py  test_ticker_resolve.py  test_visuals_sigma.py
(+311 files in other folders)
