[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "riskmodels-py"
version = "0.3.0"
description = "Python SDK for the RiskModels API (ERM3 factors, hedge ratios, explained risk)"
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.10"
authors = [{ name = "RiskModels" }]
keywords = ["risk", "factors", "hedging", "equities", "ERM3"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27,<1",
  "pandas>=2.0,<3",
  "pyarrow>=14,<22",
]

[project.optional-dependencies]
viz = [
  "plotly>=5.15",
  "matplotlib>=3.8,<4",
  "seaborn>=0.13,<1",
  "kaleido>=0.2,<1",
]
xarray = ["xarray>=2024.1"]
dotenv = ["python-dotenv>=1.0,<2"]
pdf = [
  "weasyprint>=60",
  "jinja2>=3.1,<4",
  "matplotlib>=3.8,<4",
]
snapshots = [
  "plotly>=5.15",
  "kaleido>=0.2,<1",
  "qrcode[pil]>=7.0",
]
all = ["riskmodels-py[viz,xarray,dotenv,pdf,snapshots]"]
dev = [
    "build>=1.2",
    "qrcode[pil]>=7.0",
    "matplotlib>=3.8,<4",
    "plotly>=5.15",
    "kaleido>=0.2,<1",
    "seaborn>=0.13,<1",
    "python-dotenv>=1.0,<2",
    "pytest>=8,<9",
  "pytest-httpx>=0.35,<1",
  "ruff>=0.6",
  "mypy>=1.8",
  "twine>=5,<7",
]

[project.urls]
Homepage = "https://riskmodels.app"
Documentation = "https://riskmodels.app/docs"
Repository = "https://github.com/BlueWaterCorp/RiskModels_API"
Issues = "https://github.com/BlueWaterCorp/RiskModels_API/issues"

[tool.hatch.build.targets.wheel]
packages = ["riskmodels"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q", "-m", "not integration"]
markers = [
    "integration: live HTTP tests against the RiskModels API (requires RISKMODELS_API_KEY)",
]
